kubernetes/template-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: template
  name: template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template
  strategy: {}
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
      - image: tbsacr.azurecr.io/template:latest
        imagePullPolicy: Always
        name: template
        resources: 
          limits:
            cpu: 500m
            memory: 612Mi
          requests:
            cpu: 250m
            memory: 356Mi
