kubernetes/template-service.yml
apiVersion: v1
kind: Service
metadata:
  name: template
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: template
  sessionAffinity: None
  type: ClusterIP
